4.0.1/dark mode fix (#6)
* Updated the following dependencies to their latest versions:

- gatsby
- gatsby-image
- gatsby-plugin-manifest
- gatsby-plugin-offline
- gatsby-plugin-react-helmet
- gatsby-plugin-sass
- gatsby-plugin-sharp
- gatsby-plugin-sitemap
- gatsby-source-filesystem
- gatsby-transformer-sharp
- react-copy-to-clipboard
- prettier

* Updated the footer React component to create a theme override cookie
that expires in a year as opposed to at the end of the session. This
way, if the user closes the browser and navigates to the site at a later
date, it will be with the theme the user has selected.

* Updated the header component SASS to change the highlighted button in
the header navigation when in dark mode. This follows the styling
similar to that of the index page's button, and will hopefully make the
site more cohesive when in dark mode.

* Updated the readme.md to include documentation explaining that the
shorthand "npm run dev" can be used, as this was implemented in the last
update but was not documented properly for those pulling down the site.

--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -8,11 +8,19 @@
 =header--theme-light
     --header-background-purple: #{$chassis-purple}
     --header-background-blue: #{$chassis-blue}
+    --header__nav-link--active-background-color: #{$white}
+    --header__nav-link--active-color: #{$slate}
+    --header__nav-link--active-hover-focus-background-color: #{$light-gray}
+    --header__nav-link--active-hover-focus-color: #{$black}
     --header__wave-fill: #{$white}
 
 =header--theme-dark
     --header-background-purple: #{darken($chassis-purple, 10%)}
     --header-background-blue: #{darken($chassis-blue, 10%)}
+    --header__nav-link--active-background-color: #{darken($slate, 5%)}
+    --header__nav-link--active-color: #{$white}
+    --header__nav-link--active-hover-focus-background-color: #{darken($slate, 10%)}
+    --header__nav-link--active-hover-focus-color: #{$white}
     --header__wave-fill: #{$black}
 
 \:root
@@ -116,13 +124,13 @@
         color: $white
 
 .header__nav-link--active
-    background-color: $white
-    color: $slate
+    background-color: var(--header__nav-link--active-background-color)
+    color: var(--header__nav-link--active-color)
     box-shadow: $drop-shadow
     &:hover, &:focus
-        background-color: $light-gray
+        background-color: var(--header__nav-link--active-hover-focus-background-color)
         text-decoration: none
-        color: $black
+        color: var(--header__nav-link--active-hover-focus-color)
 
 .header__summary p
     line-height: 1.5
